--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>bc1</artifactId>
+    <artifactId>crm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>bc1</name>
+    <name>crm</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>15</java.version>
     </properties>
     <dependencies>
+
         <dependency>
             <groupId>com.datastax.astra</groupId>
             <artifactId>astra-spring-boot-starter</artifactId>
